--- a/assets/statexpflat.css
+++ b/assets/statexpflat.css
@@ -1937,7 +1937,11 @@ tbody.collapse.in {
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: url('statexpflat/fonts/glyphicons/glyphicons-halflings-regular.eot');
-  src: url('statexpflat/fonts/glyphicons/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('statexpflat/fonts/glyphicons/glyphicons-halflings-regular.woff2') format('woff2'), url('statexpflat/fonts/glyphicons/glyphicons-halflings-regular.woff') format('woff'), url('statexpflat/fonts/glyphicons/glyphicons-halflings-regular.ttf') format('truetype'), url('statexpflat/fonts/glyphicons/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('statexpflat/fonts/glyphicons/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
+       url('statexpflat/fonts/glyphicons/glyphicons-halflings-regular.woff2') format('woff2'),
+       url('statexpflat/fonts/glyphicons/glyphicons-halflings-regular.woff') format('woff'),
+       url('statexpflat/fonts/glyphicons/glyphicons-halflings-regular.ttf') format('truetype'),
+       url('statexpflat/fonts/glyphicons/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
